--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container">
-        <h1></h1>
+        <h1>Hi! I'm Hana Kim!</h1>
         <marquee>uhhhh</marquee>
         <p>hey</p>
         <ul>
