--- a/nonfiction.html
+++ b/nonfiction.html
@@ -3,6 +3,7 @@
 <html>
 <head>
     <title>Hi! I'm Hana Kim!</title>
+         <img src="sleeperedpanda.gif" alt="the sleeper" style="width:100%; display:block; margin-bottom: 20px;">
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; }
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
