--- a/nonfiction.html
+++ b/nonfiction.html
@@ -3,16 +3,16 @@
 <html>
 <head>
     <title>Hi! I'm Hana Kim!</title>
-         <img src="sleeperedpanda.gif" alt="the sleeper" style="width:100%; display:block; margin-bottom: 20px;">
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; }
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
         h1 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
-        marquee { color: #9cdef1; font-size: 1.2em; }
+        marquee { color: #47cff5; font-size: 1.2em; }
     </style>
 </head>
 <body>
+    <img src="sleeperedpanda.gif" alt="the sleeper" style="width:100%; display:block; margin-bottom: 20px;">
     <div class="container">
         <h1></h1>
         <marquee>non-fiction writing, musings, thoughts</marquee>
