--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <p>hey</p>
         <ul>
             <li><a href="nonfiction.html">non-fiction writing, musings, thoughts</a></li>
-            <li><a href="#">fiction</a></li>
-            <li><a href="#">pictures</a></li>
+            <li><a href="#">fiction (under construction)</a></li>
+            <li><a href="#">pictures (under construction)</a></li>
         </ul>
         <hr>
     </div>
