--- a/nonfiction.html
+++ b/nonfiction.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-    <img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin-bottom: 20px;">
+    <img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;">
     <div class="container">
         <h1></h1>
         <marquee>non-fiction writing, musings, thoughts</marquee>
