--- a/nonfiction.html
+++ b/nonfiction.html
@@ -19,6 +19,7 @@
         <p>links</p>
         <ul>
             <li><a href="pokemongender.html">pokemon, gender, and you, or; are you a boy? or are you a girl?</a></li>
+            <li><a href="cocoon review.html">review: cocoon</a></li>
         </ul>
         <hr>
     </div>
