clickable gif home button

--- a/cocoon review.html
+++ b/cocoon review.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-    <img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;">
+     <a href="index.html"></a><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
     <div class="container">
         <h1>review: cocoon</h1>
         <h3> originally published on <a href="https://www.ign.com/articles/cocoon-review">IGN.com</a> </h3>
