--- a/nonfiction.html
+++ b/nonfiction.html
@@ -4,7 +4,7 @@
 <head>
     <title>Hi! I'm Hana Kim!</title>
     <style>
-        body { background-color: #feabe6; font-family: consol, monospace; }
+        body { background-color: #feabe6; font-family: Consolas, monospace; }
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
         h1 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
@@ -12,9 +12,9 @@
     </style>
 </head>
 <body>
-     <a href="index.html"></a><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
+    <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
     <div class="container">
-        <h1></h1>
+        <h1>Hi! I'm Hana Kim!</h1>
         <marquee>non-fiction writing, musings, thoughts</marquee>
         <p>links</p>
         <ul>
