--- a/pokemongender.html
+++ b/pokemongender.html
@@ -11,7 +11,7 @@
     </style>
 </head>
 <body>
-     <a href="index.html"></a><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
+     <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
     <div class="container">
         <h1>pokemon, gender, and you, or; are you a boy? or are you a girl?</h1>
         <p>“Shit, man, I don’t know.”</p>
