--- a/cocoon review.html
+++ b/cocoon review.html
@@ -12,7 +12,13 @@
 </head>
 <body>
      <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
-    <div class="container">
+    <nav style="text-align:center; margin-bottom:20px;">
+        <a href="index.html" style="margin:0 15px;">home</a>
+        <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
+        <a href="#" style="margin:0 15px;">fiction</a>
+        <a href="#" style="margin:0 15px;">pictures</a>
+    </nav>
+     <div class="container">
         <h1>review: cocoon</h1>
         <h3> originally published on <a href="https://www.ign.com/articles/cocoon-review">IGN.com</a> </h3>
         <p>without a single word, cocoon takes a small, cicada-like creature on an exciting journey through the cosmos using only a thumbstick and a single button. That setup should sound exceedingly familiar for fans of gameplay designer Jeppe Carlsen's previous work, Limbo and Inside. But here, cocoon differentiates itself from those monumentally creepy side-scrolling adventures as a 3D puzzle-platformer, and the additional dimension provides a refreshing amount of, well, depth to its challenging and intriguing puzzles. These puzzles build on each other in smart ways, keeping fundamental mechanics from the desert at the very start integrated and important all the way to the end. and even as cocoon gets more and more complex, its minimalist controls make sure it never feels overwhelming.</p>
