--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Hi! I'm Hana Kim!</title>
     <style>
-        body { background-color: #feabe6; font-family: consol, monospace; }
+        body { background-color: #feabe6; font-family: consolas, monospace; }
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
         h1 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
@@ -13,7 +13,13 @@
 </head>
 <body>
      <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
-    <div class="container">
+  <nav style="text-align:center; margin-bottom:20px;">
+        <a href="index.html" style="margin:0 15px;">home</a>
+        <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
+        <a href="#" style="margin:0 15px;">fiction</a>
+        <a href="#" style="margin:0 15px;">pictures</a>
+    </nav>
+     <div class="container">
         <h1>Hi! I'm Hana Kim!</h1>
         <marquee>uhhhh</marquee>
         <p>hey</p>
