--- a/pokemongender.html
+++ b/pokemongender.html
@@ -12,7 +12,13 @@
 </head>
 <body>
      <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
-    <div class="container">
+   <nav style="text-align:center; margin-bottom:20px;">
+        <a href="index.html" style="margin:0 15px;">home</a>
+        <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
+        <a href="#" style="margin:0 15px;">fiction</a>
+        <a href="#" style="margin:0 15px;">pictures</a>
+    </nav>
+     <div class="container">
         <h1>pokemon, gender, and you, or; are you a boy? or are you a girl?</h1>
         <p>“Shit, man, I don’t know.”</p>
         <p>That about encapsulates the feeling I had the first time that question was posed to me when I started up my first playthrough of Pokémon Crystal. No one had ever asked me that before. I never had to think about it, honestly. I just got told, “you’re a boy!” and went along with what my parents and society had laid out for me. But there was something to that question that I absolutely didn’t understand at the time, something that it placed in the back of my mind that never left.</p>
