new article, case fix

--- a/nonfiction.html
+++ b/nonfiction.html
@@ -4,7 +4,7 @@
 <head>
     <title>Hi! I'm Hana Kim!</title>
     <style>
-        body { background-color: #feabe6; font-family: Consolas, monospace; }
+        body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
         h1 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
@@ -26,6 +26,7 @@
         <ul>
             <li><a href="pokemongender.html">pokemon, gender, and you, or; are you a boy? or are you a girl?</a></li>
             <li><a href="cocoon review.html">review: cocoon</a></li>
+            <li><a href="arceusainu.html">Pokémon Legends: Arceus — a Step Forward and a Step Back</a></li>
         </ul>
         <hr>
     </div>
