--- a/pokemongender.html
+++ b/pokemongender.html
@@ -3,7 +3,7 @@
 <head>
     <title>Hi! I'm Hana Kim!</title>
     <style>
-        body { background-color: #feabe6; font-family: consol, monospace; }
+        body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
         h1 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
