--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
         h1 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
-        marquee { color: #9cdef1; font-size: 1.2em; }
+        marquee { color: #47cff5; font-size: 1.2em; }
     </style>
 </head>
 <body>
