--- a/index.html
+++ b/index.html
@@ -30,6 +30,6 @@
         </ul>
         <hr>
     </div>
-    <script src="oneko.js">data-cat="fox.png"</script>
+    <script src="oneko.js" data-cat="fox.png"></script>
 </body>
 </html>
