running fox on all pages

--- a/arceusainu.html
+++ b/arceusainu.html
@@ -33,6 +33,7 @@
     <p>At the end of it all, though, even if Adaman or Irida say they disagree with Kamado and the way he’s going about things, they still end up going along with his wishes for some reason that’s never quite explained in-game, but seemingly only because they’re afraid of what’s going to happen with the rift and they’ve just decided to trust this random man in charge of Galaxy Team instead of their long-held beliefs. I could go on for another 1200 words (and probably more on top of that) about all the other ways this reading could go even deeper, but I feel like this is a good place to stop and make my point — no one is a bad person for playing or enjoying this game. I don’t even think that people who worked on this game fully understood the implications of some of these aspects. I just want people to pay more attention to the cultures they choose to make games and other media about and be honest about giving what they’re doing the best effort they can, not only to make the people they’re talking about feel happy and respected, but to help educate others on these different cultures and what happened to them, rather than make us all just another set dressing.</p>
         <hr>
     </div>
+        <script src="oneko.js" data-cat="fox.png"></script>
 </body>
 </html>    
             
