--- a/cocoon review.html
+++ b/cocoon review.html
@@ -37,5 +37,6 @@
         <p>Cocoon is a breathtaking puzzle-platformer that borders on psychedelic. Building on what made Inside designer Jeppe Carlsen's previous work stand out, Cocoon not only presents a mind-bending journey through the cosmos via fascinating worlds-within-worlds puzzle mechanics that beg you to delve another layer deeper, but an interesting take on the repetition of work, life, and being part of a "bigger picture." With a relatively short playtime and some well-hidden collectibles that make it worth replaying, Cocoon is a must-play for fans of Limbo or Inside, or anyone looking for a new puzzle adventure to play and then sit down and think about for a while.</p>
         <hr>
     </div>
+        <script src="oneko.js" data-cat="fox.png"></script>
 </body>
 </html>
