--- a/arceusainu.html
+++ b/arceusainu.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hi! I'm Hana Kim!</title>
+    <title>hi! i'm hana kim! - pokémon legends: arceus — a step forward and a step back</title>
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
