--- a/nonfiction.html
+++ b/nonfiction.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hi! I'm Hana Kim!</title>
+    <title>hi! i'm hana kim!</title>
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
@@ -27,6 +27,9 @@
             <li><a href="pokemongender.html">pokemon, gender, and you, or; are you a boy? or are you a girl?</a></li>
             <li><a href="cocoon review.html">review: cocoon</a></li>
             <li><a href="arceusainu.html">Pokémon Legends: Arceus — a Step Forward and a Step Back</a></li>
+            <li><a href="eulogy.html"></a>Eulogy for an Old Soldier</li>
+            <li><a href="twitch.html"></a>Meet The Team Behind Twitch’s Joy-Giving Fairy Modmother</li>
+            <li><a href="momdungeon.html"></a>Thanks, Mom, but Specifically, Mom from Boyfriend Dungeon</li>
         </ul>
         <hr>
     </div>
