--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hi! I'm Hana Kim!</title>
+    <title>hi! i'm hana kim!</title>
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
