--- a/nonfiction.html
+++ b/nonfiction.html
@@ -27,9 +27,9 @@
             <li><a href="pokemongender.html">pokemon, gender, and you, or; are you a boy? or are you a girl?</a></li>
             <li><a href="cocoon review.html">review: cocoon</a></li>
             <li><a href="arceusainu.html">Pokémon Legends: Arceus — a Step Forward and a Step Back</a></li>
-            <li><a href="eulogy.html"></a>Eulogy for an Old Soldier</li>
-            <li><a href="twitch.html"></a>Meet The Team Behind Twitch’s Joy-Giving Fairy Modmother</li>
-            <li><a href="momdungeon.html"></a>Thanks, Mom, but Specifically, Mom from Boyfriend Dungeon</li>
+            <li><a href="eulogy.html">Eulogy for an Old Soldier</a></li>
+            <li><a href="twitch.html">Meet The Team Behind Twitch’s Joy-Giving Fairy Modmother</a></li>
+            <li><a href="momdungeon.html">Thanks, Mom, but Specifically, Mom from Boyfriend Dungeon</a></li>
         </ul>
         <hr>
     </div>
