--- a/twitch.html
+++ b/twitch.html
@@ -20,7 +20,7 @@
     </nav>
      <div class="container">
         <h1>Meet The Team Behind Twitch’s Joy-Giving Fairy Modmother</h1>
-                <h3> originally published on <a href="https://uproxx.com/edge/fairy-modmother-twitch-culture/">uproxx.com</a> </h3>
+                <h3> originally published on <a href="https://uproxx.com/edge/fairy-modmother-twitch-culture/">uproxx.com</a> in 2022 </h3>
 
         <p>“I’ll visit some Twitch creators! I could drop some subs in their chat, or manifest a huge pile of bits for them to swim in! Let’s do this!”</p>
         <p>Twitch’s “Fairy Modmother” has been around for a few months now, first showing up in April of 2021 to help brighten up streamers’ days with some gifts subs or some bits. The next time we saw them was around June, when they were again donating subs and bits to streamers to help celebrate LGBTQ+ Pride. However, the biggest wave of gifts from the Fairy Modmother has recently swept across Twitch, giving away hundreds, if not thousands of dollars worth of bits, as well as spreading some general, “non-denominational holiday cheer” in the chat. </p>
