--- a/nonfiction.html
+++ b/nonfiction.html
@@ -6,7 +6,7 @@
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
-        h1 { color: #44383f; text-align: left; }
+        h1,h3 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
     </style>
