--- a/eulogy.html
+++ b/eulogy.html
@@ -5,7 +5,7 @@
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
-        h1 { color: #44383f; text-align: left; }
+        h1,h5 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
     </style>
@@ -20,6 +20,7 @@
     </nav>
      <div class="container">
         <h1>eulogy for an old soldier</h1>
+        <h5>march 2025</h5>
         <p>My dad and I never got along as well as we liked. There's no easy way around that. At the base of it, we just had too many disagreements on too many things to ever be the daddy-daughter duo that we see all too often in life and media. We would fight, we would argue, we would yell; about anything from differing opinions on a baseball team or politics or whether or not Kim Petras had "the Surgery" (this argument is where I learned that it's easy to shut someone up on this particular topic by going "what, do you want to see her dick or something?").  He was an old soldier from a different time — I was, and remain to this day, the anarchist trans daughter with tattoos and piercings and a middling writing career. We were never going to see eye to eye on everything.</p>
         <p>I don't say all this to make him look like a bad guy. In fact, I say all this to present the opposite; my dad was the greatest man I ever personally knew. In spite of everything I could ever say to malign him or make him look like a terrible person, he was always one of the shining pillars of my life. Without him, there's no Hana Willow. And all it took for me to figure that out is for him not to make it out the other side of a heart attack.</p>
         <p>My dad was a man defined by his upbringing as much as anyone else is. Growing up bouncing around the United States, from Georgia to Kansas to Chicago and everywhere in between, my dad was not a man for what I like to call "active friendship." He wasn't going to the bar every week with his friends, he wasn't calling them once a month to catch up, but if anyone he ever knew was in town for even a brief moment, or if he was in theirs, the conversation would pick up as if the time between visits was never even real. I didn't know how valuable this would be when I saw this pattern of behavior throughout my childhood until I reached my late twenties. Unfortunately, I am currently in my late twenties while writing this.
