--- a/pokemongender.html
+++ b/pokemongender.html
@@ -5,7 +5,7 @@
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
-        h1,h3 { color: #44383f; text-align: left; }
+        h1,h5 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
     </style>
@@ -20,6 +20,7 @@
     </nav>
      <div class="container">
         <h1>pokemon, gender, and you, or; are you a boy? or are you a girl?</h1>
+        <h5>december 2020</h5>
         <p>“Shit, man, I don’t know.”</p>
         <p>That about encapsulates the feeling I had the first time that question was posed to me when I started up my first playthrough of Pokémon Crystal. No one had ever asked me that before. I never had to think about it, honestly. I just got told, “you’re a boy!” and went along with what my parents and society had laid out for me. But there was something to that question that I absolutely didn’t understand at the time, something that it placed in the back of my mind that never left.</p>
         <p>“Am I a boy?” I remember picking “boy” after some contemplation, then immediately regretting that choice and restarting the game, choosing the female option this time. Then, a dialogue box pops up with the words, “You’ll face fun times and tough challenges,” which honestly might be the one sentence I’d go back in time and tell myself. Seeing that phrase, and knowing that this was my first experience in any world as a girl, was frightening. Would I have to pick different types of Pokémon than I did before? “Well,” I thought to myself, “It’s not like it matters whether a girl has a Cyndaquil or a boy has a Chikorita, plus no one can even see my game.” Then I chose Chikorita. I remember coming up with potential defenses for why I was playing as a female character, and why I chose the “girly” starter, but the people who cared about those choices weren’t the type of people to let me defend myself against that type of ridicule anyways. The day I finally brought my GameBoy to school with me to play it during recess instead of sitting there doing nothing like usual, some other kids decided to see what I was so interested in.</p>
