--- a/nonfiction.html
+++ b/nonfiction.html
@@ -22,14 +22,17 @@
     <div class="container">
         <h1>Hi! I'm Hana Kim!</h1>
         <marquee>non-fiction writing, musings, thoughts</marquee>
-        <p>links</p>
+        <p>professional work</p>
         <ul>
-            <li><a href="pokemongender.html">pokemon, gender, and you, or; are you a boy? or are you a girl?</a></li>
             <li><a href="cocoon review.html">review: cocoon</a></li>
             <li><a href="arceusainu.html">Pokémon Legends: Arceus — a Step Forward and a Step Back</a></li>
-            <li><a href="eulogy.html">Eulogy for an Old Soldier</a></li>
             <li><a href="twitch.html">Meet The Team Behind Twitch’s Joy-Giving Fairy Modmother</a></li>
             <li><a href="momdungeon.html">Thanks, Mom, but Specifically, Mom from Boyfriend Dungeon</a></li>
+        </ul>
+        <p>personal stuff</p>
+        <ul>
+            <li><a href="pokemongender.html">pokemon, gender, and you, or; are you a boy? or are you a girl?</a></li>
+            <li><a href="eulogy.html">Eulogy for an Old Soldier</a></li>
         </ul>
         <hr>
     </div>
