--- a/nonfiction.html
+++ b/nonfiction.html
@@ -31,7 +31,7 @@
         </ul>
         <p>personal stuff</p>
         <ul>
-            <li><a href="pokemongender.html">pokemon, gender, and you, or; are you a boy? or are you a girl?</a></li>
+            <li><a href="pokemongender.html">pokémon, gender, and you, or; are you a boy? or are you a girl?</a></li>
             <li><a href="eulogy.html">Eulogy for an Old Soldier</a></li>
         </ul>
         <hr>
