--- a/pokemongender.html
+++ b/pokemongender.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Hi! I'm Hana Kim!</title>
+    <title>hi! i'm hana kim! - pokémon, gender, and you, or; are you a boy? or are you a girl?</title>
     <style>
         body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
@@ -19,7 +19,7 @@
         <a href="#" style="margin:0 15px;">pictures</a>
     </nav>
      <div class="container">
-        <h1>pokemon, gender, and you, or; are you a boy? or are you a girl?</h1>
+        <h1>pokémon, gender, and you, or; are you a boy? or are you a girl?</h1>
         <h5>december 2020</h5>
         <p>“Shit, man, I don’t know.”</p>
         <p>That about encapsulates the feeling I had the first time that question was posed to me when I started up my first playthrough of Pokémon Crystal. No one had ever asked me that before. I never had to think about it, honestly. I just got told, “you’re a boy!” and went along with what my parents and society had laid out for me. But there was something to that question that I absolutely didn’t understand at the time, something that it placed in the back of my mind that never left.</p>
