--- a/index.html
+++ b/index.html
@@ -10,6 +10,24 @@
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
     </style>
+    <!-- Primary Meta Tags --> <!-- this is the default metadata which all websites can draw on --> 
+    <title>YOUR_WEBSITE</title>
+    <meta name="title" content="YOUR_HEADING">
+    <meta name="description" content="YOUR_SUMMARY">
+
+<!-- Open Graph / Facebook --> <!-- this is what Facebook and other social websites will draw on -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="YOUR_URL">
+    <meta property="og:title" content="YOUR_HEADING">
+    <meta property="og:description" content="YOUR_SUMMARY">
+    <meta property="og:image" content="YOUR_IMAGE_URL">
+
+<!-- Twitter --> <!-- You can have different summary for Twitter! -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="YOUR_URL">
+    <meta property="twitter:title" content="YOUR_HEADING">
+    <meta property="twitter:description" content="YOUR_SUMMARY">
+    <meta property="twitter:image" content="YOUR_IMAGE_URL">
 </head>
 <body>
      <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
