--- a/index.html
+++ b/index.html
@@ -10,24 +10,26 @@
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
     </style>
-    <!-- Primary Meta Tags --> <!-- this is the default metadata which all websites can draw on --> 
-    <title>YOUR_WEBSITE</title>
-    <meta name="title" content="YOUR_HEADING">
-    <meta name="description" content="YOUR_SUMMARY">
+    <!-- Primary Meta Tags -->
+<title>hi! i'm hana kim!</title>
+<meta name="title" content="hi! i'm hana kim!" />
+<meta name="description" content="" />
 
-<!-- Open Graph / Facebook --> <!-- this is what Facebook and other social websites will draw on -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="YOUR_URL">
-    <meta property="og:title" content="YOUR_HEADING">
-    <meta property="og:description" content="YOUR_SUMMARY">
-    <meta property="og:image" content="YOUR_IMAGE_URL">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://www.hanayanagi.kim/" />
+<meta property="og:title" content="hi! i'm hana kim!" />
+<meta property="og:description" content="" />
+<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
 
-<!-- Twitter --> <!-- You can have different summary for Twitter! -->
-    <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="YOUR_URL">
-    <meta property="twitter:title" content="YOUR_HEADING">
-    <meta property="twitter:description" content="YOUR_SUMMARY">
-    <meta property="twitter:image" content="YOUR_IMAGE_URL">
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="http://www.hanayanagi.kim/" />
+<meta property="twitter:title" content="hi! i'm hana kim!" />
+<meta property="twitter:description" content="" />
+<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+
+<!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
      <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
