--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <meta property="og:url" content="http://www.hanayanagi.kim/" />
 <meta property="og:title" content="hi! i'm hana kim!" />
 <meta property="og:description" content="" />
-<meta property="og:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="sleeperedpanda.gif" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="http://www.hanayanagi.kim/" />
 <meta property="twitter:title" content="hi! i'm hana kim!" />
 <meta property="twitter:description" content="" />
-<meta property="twitter:image" content="https://metatags.io/images/meta-tags.png" />
+<meta property="og:image" content="sleeperedpanda.gif" />
 
 <!-- Meta Tags Generated with https://metatags.io -->
 </head>
