--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Primary Meta Tags -->
 <title>hi! i'm hana kim!</title>
 <meta name="title" content="hi! i'm hana kim!" />
-<meta name="description" content="" />
+<meta name="description" content="im hana" />
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
