--- a/index.html
+++ b/index.html
@@ -10,29 +10,26 @@
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
     </style>
-    <!-- Primary Meta Tags -->
+
 <title>hi! i'm hana kim!</title>
 <meta name="title" content="hi! i'm hana kim!" />
 <meta name="description" content="im hana" />
 
-<!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://www.hanayanagi.kim/" />
 <meta property="og:title" content="hi! i'm hana kim!" />
 <meta property="og:description" content="" />
-<meta property="og:image" content="sleeperedpanda.gif" />
+<meta property="og:image" content="sleeperedpanda.png" />
 
-<!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="http://www.hanayanagi.kim/" />
 <meta property="twitter:title" content="hi! i'm hana kim!" />
 <meta property="twitter:description" content="" />
-<meta property="og:image" content="sleeperedpanda.gif" />
+<meta property="og:image" content="sleeperedpanda.png" />
 
-<!-- Meta Tags Generated with https://metatags.io -->
 </head>
 <body>
-     <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
+     <a href="index.html"><img src="sleeperedpanda.png" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
   <nav style="text-align:center; margin-bottom:20px;">
         <a href="index.html" style="margin:0 15px;">home</a>
         <a href="nonfiction.html" style="margin:0 15px;">non-fiction</a>
