--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta property="twitter:url" content="http://www.hanayanagi.kim/" />
 <meta property="twitter:title" content="hi! i'm hana kim!" />
 <meta property="twitter:description" content="" />
-<meta property="og:image" content="sleeperedpanda.png" />
+<meta property="twitter:image" content="sleeperedpanda.png" />
 
 </head>
 <body>
