--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="og:description" content="" />
 <meta property="og:image" content="sleeperedpanda.png" />
 
-<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:card" content="sleeperedpanda.png" />
 <meta property="twitter:url" content="http://www.hanayanagi.kim/" />
 <meta property="twitter:title" content="hi! i'm hana kim!" />
 <meta property="twitter:description" content="" />
