--- a/nonfiction.html
+++ b/nonfiction.html
@@ -10,6 +10,23 @@
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
     </style>
+    
+<title>hi! i'm hana kim!</title>
+<meta name="title" content="hi! i'm hana kim!" />
+<meta name="description" content="im hana" />
+
+<meta property="og:type" content="website" />
+<meta property="og:url" content="http://www.hanayanagi.kim/" />
+<meta property="og:title" content="hi! i'm hana kim!" />
+<meta property="og:description" content="" />
+<meta property="og:image" content="sleeperedpanda.png" />
+
+<meta property="twitter:card" content="sleeperedpanda.png" />
+<meta property="twitter:url" content="http://www.hanayanagi.kim/" />
+<meta property="twitter:title" content="hi! i'm hana kim!" />
+<meta property="twitter:description" content="" />
+<meta property="twitter:image" content="sleeperedpanda.png" />
+
 </head>
 <body>
     <a href="index.html"><img src="sleeperedpanda.gif" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
