--- a/nonfiction.html
+++ b/nonfiction.html
@@ -45,7 +45,7 @@
             <li><a href="arceusainu.html">Pokémon Legends: Arceus — a Step Forward and a Step Back</a></li>
             <li><a href="twitch.html">Meet The Team Behind Twitch’s Joy-Giving Fairy Modmother</a></li>
             <li><a href="momdungeon.html">Thanks, Mom, but Specifically, Mom from Boyfriend Dungeon</a></li>
-            <li><a href=:"planetanime.html">Planet Anime sticks the landing as Planet Comicon Kansas City branches out</a></li>
+            <li><a href="planetanime.html">Planet Anime sticks the landing as Planet Comicon Kansas City branches out</a></li>           
         </ul>
         <p>personal stuff</p>
         <ul>
