--- a/index.html
+++ b/index.html
@@ -3,29 +3,28 @@
 <html>
 <head>
     <title>hi! i'm hana kim!</title>
+    <meta name="title" content="hi! i'm hana kim!"/>
+    <meta name="description" content="im hana"/>
+
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://www.hanayanagi.kim/"/>
+    <meta property="og:title" content="hi! i'm hana kim!"/>
+    <meta property="og:description" content=""/>
+    <meta property="og:image" content="sleeperedpanda.png"/>
+
+    <meta property="twitter:card" content="summary_large_image"/>
+    <meta property="twitter:url" content="https://www.hanayanagi.kim/"/>
+    <meta property="twitter:title" content="hi! i'm hana kim!"/>
+    <meta property="twitter:description" content=""/>
+    <meta property="twitter:image" content="sleeperedpanda.png"/>
+
     <style>
-        body { background-color: #feabe6; font-family: consol, monospace; text-transform: lowercase;}
+        body { background-color: #feabe6; font-family: Consolas, monospace; text-transform: lowercase;}
         .container { width: 800px; margin: auto; border: 3px dashed #ff69b4; padding: 20px; }
         h1 { color: #44383f; text-align: left; }
         img { border: 2px solid #1f1f1f; }
         marquee { color: #47cff5; font-size: 1.2em; }
     </style>
-
-<title>hi! i'm hana kim!</title>
-<meta name="title" content="hi! i'm hana kim!"/>
-<meta name="description" content="im hana"/>
-
-<meta property="og:type" content="website"/>
-<meta property="og:url" content="https://www.hanayanagi.kim/"/>
-<meta property="og:title" content="hi! i'm hana kim!"/>
-<meta property="og:description" content=""/>
-<meta property="og:image" content="sleeperedpanda.png"/>
-
-<meta property="twitter:url" content="https://www.hanayanagi.kim/"/>
-<meta property="twitter:title" content="hi! i'm hana kim!"/>
-<meta property="twitter:description" content=""/>
-<meta property="twitter:image" content="sleeperedpanda.png"/>
-
 </head>
 <body>
      <a href="index.html"><img src="sleeperedpanda.png" alt="the sleeper" style="width:50%; display:block; margin: 0 auto 20px auto; border: none;"></a>
