--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <marquee>about</marquee>
         <p>hey hi howdy hello! i'm hana yanagi kim! welcome to my website! </p>
         <p>this is where i keep backups of professional work i'd like to keep in one place, where i post personal blogs, and where i keep short stories and pictures that are special to me (eventually).</p>
-        <p>i kinda do a lot of different stuff, but my main thing is that i'm a writer; i've worked in games journalism for about 5 years, off and on, and i am currently working on my first novel.</p>
+        <p>i kinda do a lot of different stuff, but my main thing is that i'm a writer; i've worked in games journalism off and on for about 5 years, and i am currently working on my first novel.</p>
         <p>in my free time, i like to play video games, draw, and take photos of things i see while i'm on walks or traveling.</p>
         </div>
     <script src="oneko.js" data-cat="fox.png"></script>
